<resources>
  <string name="app_name">TAPNotes</string>

  <string name="action_settings">Settings</string>
  <string name="action_about">About</string>
  <string name="title_activity_scripture_testing">ScriptureTestingActivity</string>

  <string name="hello_world">Hello world!</string>

  <!-- EDITOR MENU -->
  <string name="editor_menu_title_text_scripture">Scripture</string>
  <string name="editor_menu_title_text_picture">Picture</string>
  <string name="editor_menu_title_text_video">Video</string>
  <string name="title_activity_program_selection">ProgramSelectionActivity</string>

  <string-array name="spinner_options">
    <item>Standard</item>
    <item>Speaker</item>
    <item>Attendance</item>
    <item>Baptism</item>
  </string-array>

  <string name="holdertag">holder</string>
  <string name="notetag">note</string>
  <string name="notes_placeholder_header_information">Information about the current talk found here.</string>
  <string name="notes_placeholder_note_area_1">--Press the hamburger button in the top left corner to show the program menu.</string>
  <string name="notes_placeholder_note_area_2">--Choose a talk from the list to begin taking notes.</string>
  <string name="notes_placeholder_note_area_3">--Then, you will see the note editor at the bottom of the screen.</string>
  <string name="notes_placeholder_note_area_4">--It works just like a chat application.</string>
  <string name="notes_placeholder_note_area_5">--Slide from the left side of the screen for the options menu.</string>
  <string name="notes_placeholder_note_area_6">--Press the overflow button in the top right corner to access Settings.</string>
  <string name="scripture_picker_button_proceed">INSERT</string>
  <string name="scripture_picker_button_cancel">CANCEL</string>
  <string name="program_menu_jw_library">JW Library</string>
  <string name="program_menu_jw_language">JW Language</string>
  <string name="program_menu_wol">Watchtower Online Library</string>
  <string name="action_submit_feedback">Submit Feedback</string>
  <string name="action_prev_talk">Previous Talk</string>
  <string name="action_refresh_talk">Refresh Notes</string>

</resources>
