<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
  <item
      android:id="@+id/editor_item_scripture"
      android:orderInCategory="1"
      android:title="@string/editor_menu_title_text_scripture"
      android:icon="@drawable/bible"
      app:showAsAction="never"/>
  <item
      android:id="@+id/editor_item_picture"
      android:orderInCategory="2"
      android:title="@string/editor_menu_title_text_picture"
      android:icon="@drawable/ic_photo_camera_black_48dp"
      app:showAsAction="never"/>
  <item
      android:id="@+id/editor_item_video"
      android:orderInCategory="3"
      android:title="@string/editor_menu_title_text_video"
      android:icon="@drawable/ic_videocam_black_48dp"
      app:showAsAction="never"/>
</menu>
