<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    android:id="@+id/main_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?notes_container_background"
    android:fitsSystemWindows="true">

  <android.support.design.widget.AppBarLayout
      android:id="@+id/appbar"
      android:layout_width="match_parent"
      android:layout_height="@dimen/detail_backdrop_height"
      android:fitsSystemWindows="true"
      android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

    <android.support.design.widget.CollapsingToolbarLayout
        android:id="@+id/collapsing_toolbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        app:contentScrim="?attr/colorPrimary"
        app:expandedTitleMarginEnd="64dp"
        app:expandedTitleMarginStart="48dp"
        app:layout_scrollFlags="scroll|exitUntilCollapsed">

      <ImageView
          android:id="@+id/image_toolbar_header_background"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:fitsSystemWindows="true"
          android:scaleType="centerCrop"
          app:layout_collapseMode="parallax"/>

      <!-- -->

      <RelativeLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/notes_placeholder_header_information"/>
      </RelativeLayout>

      <android.support.v7.widget.Toolbar
          android:id="@+id/toolbar"
          android:layout_width="match_parent"
          android:layout_height="?attr/actionBarSize"
          app:layout_collapseMode="pin"
          app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    </android.support.design.widget.CollapsingToolbarLayout>
  </android.support.design.widget.AppBarLayout>

  <FrameLayout
      android:id="@id/delegate_container"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:background="?notes_container_background"
      app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <!-- -->

    <RelativeLayout
        android:id="@+id/placeholder_relative_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?notes_container_background">

      <LinearLayout
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_centerInParent="true"
          android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/navigation_padding_bottom"
            android:paddingTop="@dimen/navigation_padding_top_default"
            android:text="@string/notes_placeholder_note_area_1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/navigation_padding_bottom"
            android:paddingTop="@dimen/navigation_padding_top_default"
            android:text="@string/notes_placeholder_note_area_2"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/navigation_padding_bottom"
            android:paddingTop="@dimen/navigation_padding_top_default"
            android:text="@string/notes_placeholder_note_area_3"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/navigation_padding_bottom"
            android:paddingTop="@dimen/navigation_padding_top_default"
            android:text="@string/notes_placeholder_note_area_4"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/navigation_padding_bottom"
            android:paddingTop="@dimen/navigation_padding_top_default"
            android:text="@string/notes_placeholder_note_area_5"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/navigation_padding_bottom"
            android:paddingTop="@dimen/navigation_padding_top_default"
            android:text="@string/notes_placeholder_note_area_6"/>

      </LinearLayout>
    </RelativeLayout>
  </FrameLayout>
</android.support.design.widget.CoordinatorLayout>

